# clone-robotics-challenge

./: CMakeLists.txt  README.md
client_src/: client.cpp
consumer_src/: AFUnixConsumer.cpp  AFUnixConsumer.hpp  server.cpp  server.hpp
include/: simple_logger.hpp  transmission_header.hpp
publisher_src/: AFUnixPublisher.cpp  AFUnixPublisher.hpp  client.cpp  client.hpp
server_src/: server.cpp
